# Iot-Praktikum

initial_blink/: Makefile  debouncerCode.c  sdkconfig  sdkconfig.old
initial_blink/main/: blink.c
lcd_and_counter/: CMakeLists.txt  Makefile
lcd_and_counter/main/: CMakeLists.txt  lcd_and_counter.c
power-tuning-report/: main.aux  main.fdb_latexmk  main.fls  main.tex  tumuser.sty
power-tuning-report/Measurments/: All_measurements.numbers
power-tuning-report/sections/: appendix.tex  measurments.tex
sensor-report/: bibliography.bib  main.aux  main.bbl  main.bcf  main.fdb_latexmk  main.fls  main.tex  main.toc  main.xdy  settings.tex
sensor-report/figures/: architecuturePic.tex  statemachine.tex
sensor-report/pages/: disclaimer.tex  title.tex
sensor-report/sections/: compareAlgo.tex  software.tex
test_code/: CMakeLists.txt  Makefile  sdkconfig
test_code/main/: CMakeLists.txt  mySetup.h  nvs.c  nvs.h  test_code.c
test_sensor_lab/: CMakeLists.txt  device_82_key-2.json  elasticSearch_code.txt  sdkconfig  sdkconfig.old
test_sensor_lab/main/: CMakeLists.txt  countingAlgo.c  main.c  (+6 more)
wlan_and_counter/: CMakeLists.txt  Makefile  mülleimer.txt  sdkconfig
zthe_low_power/: CMakeLists.txt  README.md  device_82_key.json  sdkconfig  sdkconfig.old
zthe_low_power/main/: CMakeLists.txt  countingAlgo.c  epaperInterface.cpp  main.c  mySetup.c  powerMesurment.c  timeMgmt.c  wakeup.c  webFunctions.c  wifi.c
zthe_low_power/main/include/: countingAlgo.h  epaperInterface.h  main.h  mySetup.h  powerMesurment.h  referenceWriting.h  timeMgmt.h  wakeup.h  webFunctions.h
(+61 files in other folders)
